--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -1,15 +1,8 @@
 {
-  "common": {
-    "welcome": "Welcome",
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "save": "Save",
-    "cancel": "Cancel",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search"
+  "header": {
+    "title": "Arcstratus"
   },
+  "common": {},
   "navigation": {
     "home": "Home",
     "about": "About Us",
