--- a/src/i18n/dictionaries/tw.json
+++ b/src/i18n/dictionaries/tw.json
@@ -1,15 +1,8 @@
 {
-  "common": {
-    "welcome": "歡迎",
-    "loading": "載入中...",
-    "error": "錯誤",
-    "success": "成功",
-    "save": "儲存",
-    "cancel": "取消",
-    "delete": "刪除",
-    "edit": "編輯",
-    "search": "搜尋"
+  "header": {
+    "title": "諾澄科技"
   },
+  "common": {},
   "navigation": {
     "home": "首頁",
     "about": "關於我們",
