fix: use dynamic metadata for i18n

--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -1,4 +1,8 @@
 {
+  "head": {
+    "title": "Arcstratus",
+    "description": "Professional technology solution provider offering digital transformation consulting, custom software development, cloud solutions, intelligent analytics, and cybersecurity planning. We're passionate about creating tailored tech solutions, partnering with you to bring innovative ideas to life! From digital transformation to data analytics, we comprehensively meet enterprise technology needs to help your business grow."
+  },
   "header": {
     "title": "Arcstratus"
   },
