--- a/src/i18n/dictionaries/tw.json
+++ b/src/i18n/dictionaries/tw.json
@@ -1,4 +1,8 @@
 {
+  "head": {
+    "title": "諾澄科技",
+    "description": "專業科技解決方案提供者，提供數位轉型顧問、客製化軟體開發、雲端解決方案、智慧分析服務與資安防護規劃。我們熱衷打造專屬科技方案，與您攜手合作，用創新點子實現夢想！從數位轉型到資料分析，全方位滿足企業科技需求，助您業務成長。"
+  },
   "header": {
     "title": "諾澄科技"
   },
