fix(page): update content for hero

--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -6,6 +6,14 @@
   "header": {
     "title": "Arcstratus"
   },
+  "home": {
+    "hero": {
+      "title": "Arcstratus",
+      "slogan": "We are passionate about crafting customized solutions, collaborating hand-in-hand with various industries to realize dreams through innovative ideas!",
+      "cta": "Learn More"
+    }
+  },
+  "TBD": "//////////////////////////////////////////////////////////////",
   "common": {},
   "navigation": {
     "home": "Home",
