--- a/src/i18n/dictionaries/zh.json
+++ b/src/i18n/dictionaries/zh.json
@@ -6,6 +6,14 @@
   "header": {
     "title": "諾澄科技"
   },
+  "home": {
+    "hero": {
+      "title": "諾澄科技",
+      "slogan": "我們熱衷打造專屬的解決方案，與各產業攜手合作，用創新點子實現夢想！",
+      "cta": "了解更多"
+    }
+  },
+  "TBD": "//////////////////////////////////////////////////////////////",
   "common": {},
   "navigation": {
     "home": "首頁",
