--- a/src/i18n/dictionaries/zh.json
+++ b/src/i18n/dictionaries/zh.json
@@ -31,6 +31,20 @@
       "cta": "聯絡我們"
     }
   },
+  "news": {
+    "title": "最新消息",
+    "description": "了解我們的產品或資訊",
+    "timeline": {
+      "title": "諾澄科技 里程碑",
+      "description": "諾澄科技的旅程",
+      "data": [
+        {
+          "title": "公司成立",
+          "description": "抱著大幹一場的夢想，正式把公司開起來！這就是我們追夢的起點！"
+        }
+      ]
+    }
+  },
   "TBD": "//////////////////////////////////////////////////////////////",
   "common": {},
   "navigation": {
