--- a/src/i18n/dictionaries/zh.json
+++ b/src/i18n/dictionaries/zh.json
@@ -62,15 +62,38 @@
   },
   "about": {
     "title": "關於諾澄",
-    "description": "諾澄有限科技公司（Arcstratus Co., Ltd.）是一家專注於雲端技術創新的企業，以「諾守承諾，澄見未來」為核心理念。「諾澄」寓意我們對客戶的堅定承諾與提供清晰解決方案的追求，而「Arcstratus」則融合「Arc」（連結與創新的弧線）與「Stratus」（穩定層雲），象徵我們將先進技術與可靠雲端服務相連，助力企業與個人在數位時代實現卓越發展。",
-    "mission": {
-      "title": "我們的使命",
-      "description": "成為您值得信賴的雲端技術夥伴，為企業提供創新且可靠的解決方案。"
-    },
-    "vision": {
-      "title": "我們的願景",
-      "description": "引領雲端技術創新，推動企業數位轉型，創造更美好的未來。"
-    }
+    "description": "了解我們公司的故事、使命、價值觀和團隊。",
+    "ourStory": "我們的故事",
+    "storyContent": "諾澄成立於對數位轉型的願景，一直處於技術創新的前沿。我們的旅程始於一個簡單而強大的使命：通過尖端解決方案和專業指導，幫助企業在數位時代蓬勃發展。",
+    "ourMission": "我們的使命",
+    "missionContent": "我們致力於為企業提供創新的技術解決方案，推動增長、效率和競爭優勢。我們的使命是成為您數位轉型過程中值得信賴的合作夥伴，幫助您自信地應對複雜的技術世界。",
+    "ourValues": "我們的價值觀",
+    "values": [
+      {
+        "title": "誠信",
+        "description": "我們在所有業務往來中保持最高的誠實和透明度標準。"
+      },
+      {
+        "title": "合作",
+        "description": "我們相信團隊合作的力量，與客戶緊密合作，實現共同成功。"
+      },
+      {
+        "title": "卓越",
+        "description": "我們追求完美，確保服務的最高品質。"
+      },
+      {
+        "title": "創新",
+        "description": "我們不斷突破界限，探索新的可能性，提供尖端解決方案。"
+      }
+    ],
+    "ourTeam": "我們的團隊",
+    "teamContent": "我們的團隊由熱情的專業人士組成，在軟體開發、雲計算、數據分析和網絡安全方面擁有豐富的專業知識。我們共同帶來多年的經驗和對卓越的共同承諾。",
+    "teamMembers": [
+      {
+        "name": "Wenke Lai",
+        "role": "校長兼撞鐘"
+      }
+    ]
   },
   "services": {
     "title": "服務項目",
