--- a/src/i18n/dictionaries/zh.json
+++ b/src/i18n/dictionaries/zh.json
@@ -136,5 +136,66 @@
     "email": "電子郵件",
     "password": "密碼",
     "forgotPassword": "忘記密碼？"
+  },
+  "careers": {
+    "title": "加入我們",
+    "description": "探索諾澄科技的職涯機會，成為我們創新團隊的一員。",
+    "whyJoin": "為什麼選擇諾澄？",
+    "whyJoinContent": "在諾澄科技，我們致力於創造一個創新蓬勃發展、人才持續成長的環境。加入我們，成為塑造科技未來的團隊一員。",
+    "benefits": [
+      {
+        "title": "具競爭力的薪酬",
+        "description": "我們提供具競爭力的薪資和全面的福利方案，確保團隊成員得到良好的照顧。"
+      },
+      {
+        "title": "工作與生活平衡",
+        "description": "我們理解維持工作與個人生活健康平衡的重要性。"
+      },
+      {
+        "title": "專業成長",
+        "description": "持續的學習和發展機會，幫助您在職涯中不斷成長。"
+      },
+      {
+        "title": "創新環境",
+        "description": "使用尖端技術，參與能帶來改變的精彩專案。"
+      }
+    ],
+    "ourCulture": "我們的企業文化",
+    "cultureContent": "我們的文化建立在合作、創新和對科技的共同熱情之上。我們重視多樣性、創造力，以及每位團隊成員帶來的獨特觀點。",
+    "culturePillars": [
+      {
+        "icon": "🤝",
+        "title": "團隊合作",
+        "description": "我們相信通過共同努力實現共同目標，創造創新解決方案。"
+      },
+      {
+        "icon": "💡",
+        "title": "創新思維",
+        "description": "我們鼓勵創意思考和新想法，推動技術進步。"
+      },
+      {
+        "icon": "🌱",
+        "title": "持續成長",
+        "description": "我們支持所有團隊成員的持續學習和個人發展。"
+      }
+    ],
+    "growth": "成長機會",
+    "growthContent": "在諾澄科技，我們致力於幫助團隊成員在專業和個人方面都獲得成長。我們提供各種技能發展和職涯晉升的機會。",
+    "growthOpportunities": [
+      {
+        "title": "技術培訓",
+        "description": "定期舉辦工作坊和培訓課程，讓您的技能與最新技術保持同步。"
+      },
+      {
+        "title": "職涯發展",
+        "description": "清晰的職涯發展路徑和導師計劃，幫助您實現專業目標。"
+      }
+    ],
+    "cta": {
+      "title": "準備好加入我們了嗎？",
+      "content": "我們一直在尋找優秀的人才加入我們的團隊。發送您的履歷，讓我們一起探索機會。",
+      "button": "發送履歷",
+      "email": "careers@arcstratus.io"
+    }
   }
 }
