--- a/src/i18n/dictionaries/tw.json
+++ b/src/i18n/dictionaries/tw.json
@@ -13,7 +13,31 @@
     "footer": {
       "copyright": "© 2025 諾澄科技。保留所有權利。",
       "privacyPolicy": "隱私政策",
-      "termsOfService": "服務條款"
+      "termsOfService": "服務條款",
+      "products": {
+        "title": "產品",
+        "unitobuy": "由你買",
+        "islandVoice": "島語存真"
+      },
+      "resources": {
+        "title": "資源",
+        "support": "支援",
+        "serviceStatus": "服務狀態",
+        "security": "安全性",
+        "legal": "法律"
+      },
+      "developers": {
+        "title": "開發者",
+        "partners": "合作夥伴",
+        "becomePartner": "加入我們"
+      },
+      "company": {
+        "title": "公司",
+        "about": "關於我們",
+        "press": "新聞",
+        "careers": "職缺",
+        "contactUs": "聯絡我們"
+      }
     },
     "buttons": {
       "learnMore": "了解更多",
@@ -159,5 +183,12 @@
       "email": "info@arcstratus.io",
       "phone": "+1 (555) 123-4567"
     }
+  },
+  "careers": {
+    "title": "職缺",
+    "description": "加入我們的團隊，一起改變未來",
+    "currentOpenings": "目前開放職缺",
+    "applyNow": "立即申請",
+    "whyJoinUs": "為什麼要加入我們"
   }
 }
