--- a/src/i18n/dictionaries/tw.json
+++ b/src/i18n/dictionaries/tw.json
@@ -48,34 +48,35 @@
   },
   "home": {
     "hero": {
-      "title": "為現代企業提供雲端解決方案",
-      "subtitle": "透過我們尖端的雲端服務優化您的基礎設施",
-      "cta": "立即開始"
-    },
-    "features": {
-      "title": "我們的服務",
-      "subtitle": "我們提供的服務",
-      "feature1": {
-        "title": "產品設計",
-        "description": "以用戶為中心的設計解決方案，提升用戶體驗並推動業務增長"
-      },
-      "feature2": {
-        "title": "軟體開發",
-        "description": "根據您的特定業務需求量身定制的軟體解決方案"
-      },
-      "feature3": {
-        "title": "雲端架構",
-        "description": "為最佳性能設計的可擴展和安全的雲端基礎設施"
-      },
-      "feature4": {
-        "title": "DevOps 與維護",
-        "description": "持續整合、交付和維護服務，確保您的系統順暢運行"
+      "title": "歡迎來到「諾🍊科技」",
+      "subtitle": "Hi, 我是文克,",
+      "description": "一個熱愛科技、喜歡解決問題的雲端架構師。無論你是想打造專屬軟體、建構雲端天地，還是跨入AI的奇幻國度，我都能成為你的最佳拍檔！",
+      "button": {
+        "cta": "聯絡我們",
+        "more": "了解更多"
       }
     },
+    "features": {
+      "title": "我能為你做什麼？",
+      "items": [
+        {
+          "title": "量身訂製的使用者體驗",
+          "description": "不是每個企業都適合市面上的標準軟體！我能根據你的獨特需求，打造專屬於你的數位工具。從簡單的網站到複雜的管理系統，都能為你量身定做！"
+        },
+        {
+          "title": "跟上時代的雲端架構",
+          "description": "雲端不再是時髦的詞彙，它是節省成本、提高效率的實用工具！我能幫你設計最合適的雲端架構，讓你的業務運行更順暢、更安全，還能省下大筆硬體投資。"
+        },
+        {
+          "title": "在AI領域冒險",
+          "description": "想讓AI為你的業務增添競爭力嗎？不需要龐大的技術團隊，我能幫你評估、設計並實現最適合你的AI解決方案，讓你的業務領先一步！"
+        }
+      ]
+    },
     "cta": {
-      "title": "準備好轉變您的業務了嗎？",
-      "subtitle": "讓我們討論如何幫助您實現目標",
-      "button": "立即聯絡我們"
+      "title": "有任何想法？",
+      "subtitle": "準備好開始實現你的創意了嗎？或者只是有些問題想問問？",
+      "button": "快來找我們聊聊"
     }
   },
   "products": {
