fix: remove press page

--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -34,7 +34,7 @@
       "company": {
         "title": "Company",
         "about": "About",
-        "press": "Press",
+        "news": "News",
         "careers": "Careers",
         "contactUs": "Contact Us"
       }
