--- a/src/i18n/dictionaries/tw.json
+++ b/src/i18n/dictionaries/tw.json
@@ -34,7 +34,7 @@
       "company": {
         "title": "公司",
         "about": "關於我們",
-        "press": "新聞",
+        "news": "新聞",
         "careers": "職缺",
         "contactUs": "聯絡我們"
       }
